CS_SBOX_20150209_01/Metadata/unpackaged/objects/Disable_Rules__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Workflow_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Disable Rules</label>
</CustomObject>